# handbrake-agent

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  apm.lock.yaml  apm.yml  handbrake-agent.spec  main.py  pyproject.toml  requirements.txt  skills-lock.json  test_copilot.py
.claude/skills/: copilot-sdk
cli/: config_loader.py
cli/flags/: __init__.py  auto_loop.py  batch.py  config.py  ffmpeg.py  model.py  params_file.py  preview.py  prompt.py  verify.py  version.py  vmaf.py  vmaf_feedback.py  yes.py
docs/: cli_reference.md  hba_cli.md  hba_run_cli.md
docs/example/: config.example.yaml
docs/handoffs/: 2026-05-10-config-flag-branch.md
tests/: test_cli_flags.py  test_config_loader.py
tools/: __init__.py  ai_analyzer.py  quality.py  sleep_guard.py  transcoder.py  video_info.py
