[project]
name = "handbrake-agent"
version = "1.5.2"
description = "AI-powered video transcoding tool using GitHub Copilot SDK"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "HandBrake Agent Contributors"}
]
keywords = ["video", "transcoding", "ai", "ffmpeg", "handbrake", "h265"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video :: Conversion",
]
dependencies = [
    "github-copilot-sdk>=0.3.0,<1.0.0",
    "pyinstaller>=6.19.0",
    "pyyaml>=6.0",
    "tqdm>=4.67.3",
]

[project.scripts]
handbrake-agent = "main:main"
hba = "main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools", "cli"]

[tool.hatch.build.targets.wheel.force-include]
"main.py" = "main.py"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.5",
    "ruff>=0.15.0",
]

[tool.black]
line-length = 120
target-version = ['py311', 'py312', 'py313']

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []
